# Chess-Game

./: CMakeLists.txt  README.md  game.cpp  game.hpp  graphics.cpp  graphics.hpp  main.cpp  makefile
json_files/: first_move.json
src/: client_main.cpp  game.cpp  game.hpp  game_state.cpp  game_state.hpp  graphics.hpp  local_main.cpp  main.cpp  server_main.cpp  tests.cpp
src/engine/: chess_game.cpp  chess_game.hpp  game.cpp  game.hpp  game_state.cpp  game_state.hpp
src/interface/: graphics.cpp  graphics.hpp  main.cpp  raylib_inter.cpp  raylib_inter.hpp
src/network/: game_client.cpp  game_client.hpp  game_prot.cpp  game_prot.hpp  game_server.cpp  game_server.hpp
src/server/: game_server.cpp  game_server.hpp
src/tests/: engine_tests.cpp
